# wajdiBribri-Orchestrateur_Kafka

./: Dockerfile  Objets copy 2.json  Objets.json  README.md  docker-compose.yml  package-lock.json  promtail-config.yaml  pyproject.toml
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json  tsconfig.json
frontend/src/: typings.d.ts
frontend/src/app/: app.component.css  app.component.html  app.component.ts  app.module.ts  event.service.ts
grafana/dashboards/: kafka_events_dashboard.json  loki_events_dashboard.json
grafana/provisioning/dashboards/: dashboard.yml
grafana/provisioning/datasources/: datasource.yml
orchestrator/: app.py  kafka_client.py  metrics.py  models.py  orchestrator.py  utils.py
producers/: dddf  producer_application.py  producer_ingest.py  producer_standardize.py
prometheus/: prometheus.yml
