[project]
name = "kafka-orchestrator"
version = "0.1.0"
description = "Microservice orchestrateur Kafka (FastAPI + aiokafka)"
authors = [{ name = "Ton Nom", email = "ton.email@example.com" }]
readme = "README.md"
requires-python = "==3.11"

dependencies = [
    "fastapi>=0.115,<0.116",
    "uvicorn[standard]>=0.30,<0.31",
    "aiokafka>=0.10,<0.11",
    "pydantic>=2.9,<2.10",
    "networkx>=3.3,<3.4",
    "python-dotenv>=1.0,<2.0",
    "pydot>2.0"
]

[tool.hatch.build.targets.wheel]
packages = ["orchestrator"]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<8.4",
    "httpx>=0.27,<0.28",
    "black>=24.4,<24.5",

]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
